--- a/webcam/templates/camera2.html
+++ b/webcam/templates/camera2.html
@@ -21,15 +21,15 @@
 <body>
 	<div class="templatemo-logo visible-xs-block">
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 black-bg logo-left-container">
-			<h1 class="logo-left">Object</h1>
+			<h1 class="logo-left">Object Detection</h1>
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 white-bg logo-right-container">
-			<h1 class="logo-right">Detection</h1>
+			<h1 class="logo-right">Streaming App</h1>
 		</div>			
 	</div>
 	<div class="templatemo-container">
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 black-bg left-container">
-			<h1 class="logo-left hidden-xs margin-bottom-60">Object</h1>	
+			<h1 class="logo-left hidden-xs margin-bottom-60">Object Detection</h1>	
 			<div class="tm-left-inner-container">
 				<ul class="nav nav-stacked templatemo-nav">
 				  <li><a href="http://127.0.0.1:8000/index">Home</a></li>
@@ -42,13 +42,14 @@
 			</div>
 		</div> <!-- left section -->
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 white-bg right-container">
-			<h1 class="logo-right hidden-xs margin-bottom-60">Detection</h1>	
+			<h1 class="logo-right hidden-xs margin-bottom-60">Streaming App</h1>	
 			<div class="tm-right-inner-container">
 
 				<h1 class="templatemo-header"></h1>
 
+				<!-- 				
 				{% load static %}
-				<img src="{% static 'images/ocst.jpg' %}" alt="ocst" class="img-thumbnail">
+				<img src="{% static 'images/ocst.jpg' %}" alt="ocst" class="img-thumbnail"> -->
 		
 				<article class="templatemo-item">
 					<h2>Camera 2</h2>
@@ -60,17 +61,9 @@
 				</article><hr>
 				
 				<footer>
-					<p class="col-lg-6 col-md-6 col-sm-12 col-xs-12 templatemo-copyright">Copyright &copy; 2019 OCST <!-- Credit: www.templatemo.com --></p>
+					<p class="col-lg-6 col-md-6 col-sm-12 col-xs-12 templatemo-copyright">Copyright &copy; 2019 Le-Anh Tran <!-- Credit: www.templatemo.com --></p>
 					</br>
-<!-- 					<p class="col-lg-6 col-md-6 col-sm-12 col-xs-12 templatemo-social">
-						<a href="#"><i class="fa fa-facebook fa-medium"></i></a>
-						<a href="#"><i class="fa fa-twitter fa-medium"></i></a>
-						<a href="#"><i class="fa fa-google-plus fa-medium"></i></a>
-						<a href="#"><i class="fa fa-youtube fa-medium"></i></a>
-						<a href="#"><i class="fa fa-linkedin fa-medium"></i></a>
-					</p> -->
-
-					<p class="col-lg-6 col-md-6 col-sm-12 col-xs-12 templatemo-copyright">Website: http://www.ocst.co.kr/</p>
+					<p class="col-lg-6 col-md-6 col-sm-12 col-xs-12 templatemo-copyright">Website: https://sites.google.com/view/leanhtran/</p>
 
 				</footer>
 			</div>	
